# btc-threat-sim

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: NetworkGraph.tsx  RiskGauge.tsx  ScenarioSelector.tsx  SimConsole.tsx  SimStats.tsx  StrategyCards.tsx
frontend/src/components/ui/: ConsoleText.tsx  DataLabel.tsx  GlassPanel.tsx  ScanLine.css  ScanLine.tsx  StatusBadge.tsx  index.ts
frontend/src/hooks/: useSimulation.ts
frontend/src/styles/: tokens.css
src/btc_threat_sim/: __init__.py  api.py  cli.py  data.py  models.py  report.py
src/btc_threat_sim/agents/: __init__.py  data_agent.py  sim_agent.py  strategy_agent.py
src/btc_threat_sim/sims/: __init__.py  fifty_one.py  game_theory.py  quantum.py
tests/: test_agents.py  test_api.py  test_cli.py  test_data.py  test_sims.py
